tests/snapshots/11_weather_trace.snap
---
source: tests/integration_tests.rs
expression: json_lines
---
[
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "name": "read_query",
      "query": "SELECT\n    count(*),\n    \"MinTemp\"\nFROM weather\nGROUP BY \"MinTemp\""
    },
    "spans": [
      {
        "name": "test",
        "test_name": "11_weather"
      },
      {
        "name": "run_traced_query",
        "query_name": "weather"
      }
    ],
    "target": "integration_utils",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "logical_plan": "Projection: count(Int64(1)) AS count(*), weather.MinTemp [count(*):Int64, MinTemp:Float64;N]\n  Aggregate: groupBy=[[weather.MinTemp]], aggr=[[count(Int64(1))]] [MinTemp:Float64;N, count(Int64(1)):Int64]\n    TableScan: weather [MinTemp:Float64;N, MaxTemp:Float64;N, Rainfall:Float64;N, Evaporation:Float64;N, Sunshine:Utf8View;N, WindGustDir:Utf8View;N, WindGustSpeed:Utf8View;N, WindDir9am:Utf8View;N, WindDir3pm:Utf8View;N, WindSpeed9am:Utf8View;N, WindSpeed3pm:Int64;N, Humidity9am:Int64;N, Humidity3pm:Int64;N, Pressure9am:Float64;N, Pressure3pm:Float64;N, Cloud9am:Int64;N, Cloud3pm:Int64;N, Temp9am:Float64;N, Temp3pm:Float64;N, RainToday:Utf8View;N, RISK_MM:Float64;N, RainTomorrow:Utf8View;N]",
      "name": "parse_sql",
      "sql": "SELECT\n    count(*),\n    \"MinTemp\"\nFROM weather\nGROUP BY \"MinTemp\""
    },
    "spans": [
      {
        "name": "test",
        "test_name": "11_weather"
      },
      {
        "name": "run_traced_query",
        "query_name": "weather"
      }
    ],
    "target": "integration_utils",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "name": "create_physical_plan",
      "physical_plan": "ProjectionExec: expr=[count(Int64(1))@1 as count(*), MinTemp@0 as MinTemp]\n  AggregateExec: mode=FinalPartitioned, gby=[MinTemp@0 as MinTemp], aggr=[count(Int64(1))]\n    CoalesceBatchesExec: target_batch_size=8192\n      RepartitionExec: partitioning=Hash([MinTemp@0], 8), input_partitions=8\n        RepartitionExec: partitioning=RoundRobinBatch(8), input_partitions=3\n          AggregateExec: mode=Partial, gby=[MinTemp@0 as MinTemp], aggr=[count(Int64(1))]\n            DataSourceExec: file_groups={3 groups: [[<TPCH_TABLES_DIR>/weather/result-000000.parquet], [<TPCH_TABLES_DIR>/weather/result-000001.parquet], [<TPCH_TABLES_DIR>/weather/result-000002.parquet]]}, projection=[MinTemp], file_type=parquet\n"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "11_weather"
      },
      {
        "name": "run_traced_query",
        "query_name": "weather"
      }
    ],
    "target": "integration_utils",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Incremental",
      "datafusion.node": "DataSourceExec: file_groups={3 groups: [[<TPCH_TABLES_DIR>/weather/result-000000.parquet], [<TPCH_TABLES_DIR>/weather/result-000001.parquet], [<TPCH_TABLES_DIR>/weather/result-000002.parquet]]}, projection=[MinTemp], file_type=parquet",
      "datafusion.partitioning": "UnknownPartitioning(3)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "DataSourceExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "11_weather"
      },
      {
        "name": "run_traced_query",
        "query_name": "weather"
      }
    ],
    "target": "integration_utils",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Final",
      "datafusion.node": "AggregateExec: mode=Partial, gby=[MinTemp@0 as MinTemp], aggr=[count(Int64(1))]",
      "datafusion.partitioning": "UnknownPartitioning(3)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "AggregateExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "11_weather"
      },
      {
        "name": "run_traced_query",
        "query_name": "weather"
      }
    ],
    "target": "integration_utils",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Final",
      "datafusion.node": "RepartitionExec: partitioning=RoundRobinBatch(8), input_partitions=3",
      "datafusion.partitioning": "RoundRobinBatch(8)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "RepartitionExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "11_weather"
      },
      {
        "name": "run_traced_query",
        "query_name": "weather"
      }
    ],
    "target": "integration_utils",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Final",
      "datafusion.node": "RepartitionExec: partitioning=Hash([MinTemp@0], 8), input_partitions=8",
      "datafusion.partitioning": "Hash([MinTemp@0], 8)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "RepartitionExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "11_weather"
      },
      {
        "name": "run_traced_query",
        "query_name": "weather"
      }
    ],
    "target": "integration_utils",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Final",
      "datafusion.node": "CoalesceBatchesExec: target_batch_size=8192",
      "datafusion.partitioning": "Hash([MinTemp@0], 8)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "CoalesceBatchesExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "11_weather"
      },
      {
        "name": "run_traced_query",
        "query_name": "weather"
      }
    ],
    "target": "integration_utils",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Final",
      "datafusion.node": "AggregateExec: mode=FinalPartitioned, gby=[MinTemp@0 as MinTemp], aggr=[count(Int64(1))]",
      "datafusion.partitioning": "Hash([MinTemp@0], 8)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "AggregateExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "11_weather"
      },
      {
        "name": "run_traced_query",
        "query_name": "weather"
      }
    ],
    "target": "integration_utils",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "datafusion.boundedness": "Bounded",
      "datafusion.emission_type": "Final",
      "datafusion.node": "ProjectionExec: expr=[count(Int64(1))@1 as count(*), MinTemp@0 as MinTemp]",
      "datafusion.partitioning": "Hash([MinTemp@1], 8)",
      "env": "production",
      "name": "InstrumentedExec",
      "otel.name": "ProjectionExec",
      "region": "us-west"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "11_weather"
      },
      {
        "name": "run_traced_query",
        "query_name": "weather"
      }
    ],
    "target": "integration_utils",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  },
  {
    "level": "INFO",
    "message": "close",
    "span": {
      "name": "run_traced_query",
      "query_name": "weather"
    },
    "spans": [
      {
        "name": "test",
        "test_name": "11_weather"
      }
    ],
    "target": "integration_utils",
    "time.busy": "0.00ms",
    "time.idle": "0.00ms"
  }
]
