tests/snapshots/13_distributed_weather_localhost_00_AggregateExec_localhost:50052.snap
---
source: tests/integration_tests.rs
expression: preview
---
+---------+-----------------+
| MinTemp | count(Int64(1)) |
|=========+=================|
| 10.1    | 4               |
|---------+-----------------|
| 17.2    | 2               |
|---------+-----------------|
| 11.8    | 1               |
|---------+-----------------|
| 16.7    | 1               |
|---------+-----------------|
| 12.3    | 2               |
+---------+-----------------+
