tests/snapshots/13_distributed_weather_localhost_01_AggregateExec_localhost:50053.snap
---
source: tests/integration_tests.rs
expression: preview
---
+---------+-----------------+
| MinTemp | count(Int64(1)) |
|=========+=================|
| -2.6    | 1               |
|---------+-----------------|
| 0.5     | 6               |
|---------+-----------------|
| -2.9    | 1               |
|---------+-----------------|
| 6.3     | 3               |
|---------+-----------------|
| 1.1     | 1               |
+---------+-----------------+
