tests/snapshots/13_distributed_weather_localhost_02_AggregateExec_localhost:50051.snap
---
source: tests/integration_tests.rs
expression: preview
---
+---------+------------------------+
| MinTemp | count(Int64(1))[count] |
|=========+========================|
| 8.0     | 1                      |
|---------+------------------------|
| 14.0    | 1                      |
|---------+------------------------|
| 13.7    | 1                      |
|---------+------------------------|
| 13.3    | 3                      |
|---------+------------------------|
| 7.6     | 1                      |
+---------+------------------------+
