tests/snapshots/13_distributed_weather_localhost_05_CoalesceBatchesExec_localhost:50053.snap
---
source: tests/integration_tests.rs
expression: preview
---
+---------+------------------------+
| MinTemp | count(Int64(1))[count] |
|=========+========================|
| -2.6    | 1                      |
|---------+------------------------|
| 0.5     | 4                      |
|---------+------------------------|
| -2.9    | 1                      |
|---------+------------------------|
| 6.3     | 1                      |
|---------+------------------------|
| 1.1     | 1                      |
+---------+------------------------+
