tests/snapshots/13_distributed_weather_localhost_06_DataSourceExec_localhost:50051.snap
---
source: tests/integration_tests.rs
expression: preview
---
+---------+
| MinTemp |
|=========|
| 8.0     |
|---------|
| 14.0    |
|---------|
| 13.7    |
|---------|
| 13.3    |
|---------|
| 7.6     |
+---------+
