tests/snapshots/13_distributed_weather_localhost_07_DataSourceExec_localhost:50052.snap
---
source: tests/integration_tests.rs
expression: preview
---
+---------+
| MinTemp |
|=========|
| 6.6     |
|---------|
| -1.6    |
|---------|
| -3.1    |
|---------|
| -0.1    |
|---------|
| -0.6    |
+---------+
