tests/snapshots/13_distributed_weather_localhost_10_ProjectionExec_localhost:50052.snap
---
source: tests/integration_tests.rs
expression: preview
---
+----------+---------+
| count(*) | MinTemp |
|==========+=========|
| 4        | 10.1    |
|----------+---------|
| 2        | 17.2    |
|----------+---------|
| 1        | 11.8    |
|----------+---------|
| 1        | 16.7    |
|----------+---------|
| 2        | 12.3    |
+----------+---------+
