tests/snapshots/13_distributed_weather_localhost_11_ProjectionExec_localhost:50053.snap
---
source: tests/integration_tests.rs
expression: preview
---
+----------+---------+
| count(*) | MinTemp |
|==========+=========|
| 1        | -2.6    |
|----------+---------|
| 6        | 0.5     |
|----------+---------|
| 1        | -2.9    |
|----------+---------|
| 3        | 6.3     |
|----------+---------|
| 1        | 1.1     |
+----------+---------+
