tests/snapshots/13_distributed_weather_localhost_12_RepartitionExec_localhost:50051.snap
---
source: tests/integration_tests.rs
expression: preview
---
+---------+------------------------+
| MinTemp | count(Int64(1))[count] |
|=========+========================|
| 10.1    | 3                      |
|---------+------------------------|
| 17.2    | 2                      |
|---------+------------------------|
| 11.8    | 1                      |
|---------+------------------------|
| 16.7    | 1                      |
|---------+------------------------|
| 10.1    | 1                      |
+---------+------------------------+
